2007-03-01  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by john
        
        <rdar://problem/5032095>
        Gmail Editor: Copied text pastes on a new line instead of current line
        
        Start merge failed to occur because positionAtStartOfInsertedContent
        had a bug.

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplaceSelectionCommand::positionAtStartOfInsertedContent):
        Was failing when inserting <span><div>foo/div></span>. Return the 
        inserted content's first VisiblePosition.

2007-03-02  Dave Hyatt  <hyatt@apple.com>

        Fix crasher in glyph map code (buffer overrun).

        Reviewed by darin

        * platform/win/GlyphPageTreeNodeWin.cpp:
        (WebCore::GlyphPage::fill):

2007-03-01  Antti Koivisto  <antti@apple.com>

        Reviewed by Maciej.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=12895
        REGRESSION: imagemap: pointer cursor is shown everywhere
        <rdar://problem/5028163>
 
        Image with imagemap should never itself be URLElement in hit test results. 
               
        No layout test, cursor state can't be captured.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::hitTest):

2007-03-01  Antti Koivisto  <antti@apple.com>

        Reviewed by Maciej.
        
        Fix http://bugs.webkit.org/show_bug.cgi?id=12690
        REGRESSION: can not log in to bank of america with TOT webkit
        <rdar://problem/4990044>
        
        and http://bugs.webkit.org/show_bug.cgi?id=12604
        REGRESSION: After closing the "Would you like to save password" sheet, the form fails 
        to submit automatically at http://www.mac.com/WebObjects/HomePage.woa
        <rdar://problem/4871752>
        
        and http://bugs.webkit.org/show_bug.cgi?id=12020
        REGRESSION: Flickr uploading broken
        <rdar://problem/4928662>
        